--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,28 +1,36 @@
 {
-  "name": "web",
-  "version": "0.1.0",
-  "type": "module",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack --port 3000",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint --max-warnings 0",
-    "check-types": "tsc --noEmit"
-  },
-  "dependencies": {
-    "@repo/ui": "*",
-    "next": "^15.3.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
-  },
-  "devDependencies": {
-    "@repo/eslint-config": "*",
-    "@repo/typescript-config": "*",
-    "@types/node": "^22.15.3",
-    "@types/react": "19.1.0",
-    "@types/react-dom": "19.1.1",
-    "eslint": "^9.25.0",
-    "typescript": "5.8.2"
-  }
+	"name": "web",
+	"version": "0.1.0",
+	"type": "module",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbopack --port 3000",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint --max-warnings 0",
+		"check-types": "tsc --noEmit"
+	},
+	"dependencies": {
+		"@app/trpc": "*",
+		"@app/ui": "*",
+		"@radix-ui/react-slot": "^1.2.0",
+		"@tailwindcss/postcss": "^4.1.5",
+		"@tanstack/react-query": "^5.75.1",
+		"@trpc/client": "^11.1.2",
+		"@trpc/react-query": "^11.1.2",
+		"next": "^15.3.0",
+		"postcss": "^8.5.3",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
+		"tailwindcss": "^4.1.5"
+	},
+	"devDependencies": {
+		"@app/eslint-config": "*",
+		"@app/typescript-config": "*",
+		"@types/node": "^22.15.3",
+		"@types/react": "19.1.0",
+		"@types/react-dom": "19.1.1",
+		"eslint": "^9.25.0",
+		"typescript": "5.8.2"
+	}
 }
