--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,27 +1,34 @@
 {
-  "name": "@repo/ui",
-  "version": "0.0.0",
-  "private": true,
-  "exports": {
-    "./*": "./src/*.tsx"
-  },
-  "scripts": {
-    "lint": "eslint . --max-warnings 0",
-    "generate:component": "turbo gen react-component",
-    "check-types": "tsc --noEmit"
-  },
-  "devDependencies": {
-    "@repo/eslint-config": "*",
-    "@repo/typescript-config": "*",
-    "@turbo/gen": "^2.5.0",
-    "@types/node": "^22.15.3",
-    "@types/react": "19.1.0",
-    "@types/react-dom": "19.1.1",
-    "eslint": "^9.25.0",
-    "typescript": "5.8.2"
-  },
-  "dependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
-  }
+	"name": "@app/ui",
+	"type": "module",
+	"version": "0.0.0",
+	"private": true,
+	"files": ["styles.css"],
+	"exports": {
+		"./*": "./src/*.tsx",
+		"./styles.css": "./src/styles.css"
+	},
+	"scripts": {
+		"lint": "eslint . --max-warnings 0",
+		"check-types": "tsc --noEmit"
+	},
+	"devDependencies": {
+		"@app/eslint-config": "*",
+		"@app/typescript-config": "*",
+		"@turbo/gen": "^2.5.0",
+		"@types/node": "^22.15.3",
+		"@types/react": "19.1.0",
+		"@types/react-dom": "19.1.1",
+		"eslint": "^9.25.0",
+		"typescript": "5.8.2"
+	},
+	"dependencies": {
+		"@phosphor-icons/react": "^2.1.7",
+		"@radix-ui/react-slot": "^1.2.0",
+		"class-variance-authority": "^0.7.1",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
+		"tailwind-merge": "^3.2.0",
+		"tailwindcss": "^4.1.5"
+	}
 }
